--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "exclude": ["dist"],
   "compilerOptions": {
     "target": "ES2015",  // 或更高版本（如 ES6、ES2020）
-    "lib": ["ES2015", "DOM"]  // 明确包含 ES2015 和浏览器环境类型
+    "lib": ["ES2015", "es2016", "DOM"],  // 明确包含 ES2015 和浏览器环境类型
+    "module": "ES6",
   }
 }
